feat: add project change position endpoint
